[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Level/Level.gd" type="Script" id=4]
[ext_resource path="res://src/Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_color = Color( 0.85098, 0.847059, 0.843137, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.85098, 0.847059, 0.843137, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 641, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 357 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.101961, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishGame" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = SubResource( 6 )
text = "Press Right Arrow to play again!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
custom_fonts/font = SubResource( 5 )
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_fonts/font = SubResource( 4 )
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
rect_pivot_offset = Vector2( 21, 192 )
custom_fonts/font = SubResource( 3 )
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 344 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 16, -10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 631, 0 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 8, 730 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 631, 0 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1232, 344 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 616, 376 )

[node name="Left" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -15, 358 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1320, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -15, 360 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
